project-management-service/compile_test_full.txt
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
./gradlew : C:\Users\j
erem\www\project-manag
ement-service\src\test
\java\com\kleff\projec
tmanagementservice\pre
sentationlayer\collabo
rator\CollaboratorCont
rollerTest.java:120: 
error: method 
updateCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
At line:1 char:1
+ ./gradlew 
compileTestJava 2>&1 
| Out-File -FilePath 
compile_test_full ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\j   
 erem\...to given     
types;:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
        when(collabora
torService.updateColla
borator(anyString(), 
anyString(), any()))
                      
          ^
  required: String,Str
ing,CollaboratorReques
tModel,String
  found:    
String,String,Object
  reason: actual and 
formal argument lists 
differ in length
C:\Users\jerem\www\pro
ject-management-servic
e\src\test\java\com\kl
eff\projectmanagements
ervice\presentationlay
er\collaborator\Collab
oratorControllerTest.j
ava:131: error: 
method 
updateCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
        verify(collabo
ratorService).updateCo
llaborator(eq("project
-123"), 
eq("user-456"), 
any());
                      
             ^
  required: String,Str
ing,CollaboratorReques
tModel,String
  found:    
String,String,Object
  reason: actual and 
formal argument lists 
differ in length
C:\Users\jerem\www\pro
ject-management-servic
e\src\test\java\com\kl
eff\projectmanagements
ervice\presentationlay
er\collaborator\Collab
oratorControllerTest.j
ava:142: error: 
method 
removeCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
        verify(collabo
ratorService).removeCo
llaborator("project-12
3", "user-456");
                      
             ^
  required: 
String,String,String
  found:    
String,String
  reason: actual and 
formal argument lists 
differ in length
3 errors

[Incubating] Problems report is available at: file:///C:/Users/jerem/www/project-management-service/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task 
':compileTestJava'.
> Compilation failed; 
see the compiler 
output below.
  C:\Users\jerem\www\p
roject-management-serv
ice\src\test\java\com\
kleff\projectmanagemen
tservice\presentationl
ayer\collaborator\Coll
aboratorControllerTest
.java:120: error: 
method 
updateCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
          when(collabo
ratorService.updateCol
laborator(anyString(),
 anyString(), any()))
                      
            ^
    required: String,S
tring,CollaboratorRequ
estModel,String
    found:    
String,String,Object
    reason: actual 
and formal argument 
lists differ in length
  C:\Users\jerem\www\p
roject-management-serv
ice\src\test\java\com\
kleff\projectmanagemen
tservice\presentationl
ayer\collaborator\Coll
aboratorControllerTest
.java:131: error: 
method 
updateCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
          verify(colla
boratorService).update
Collaborator(eq("proje
ct-123"), 
eq("user-456"), 
any());
                      
               ^
    required: String,S
tring,CollaboratorRequ
estModel,String
    found:    
String,String,Object
    reason: actual 
and formal argument 
lists differ in length
  C:\Users\jerem\www\p
roject-management-serv
ice\src\test\java\com\
kleff\projectmanagemen
tservice\presentationl
ayer\collaborator\Coll
aboratorControllerTest
.java:142: error: 
method 
removeCollaborator in 
interface 
CollaboratorService 
cannot be applied to 
given types;
          verify(colla
boratorService).remove
Collaborator("project-
123", "user-456");
                      
               ^
    required: 
String,String,String
    found:    
String,String
    reason: actual 
and formal argument 
lists differ in length
  3 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
generate a Build Scan 
(powered by 
Develocity).

BUILD FAILED in 2s
3 actionable tasks: 1 executed, 2 up-to-date
